[package]
name = "core"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
name = "core"
path = "src/main.rs"

[dependencies]
chrono = "0.4.41"
common = { path = "../common" }
futures-util = "0.3.31"
once_cell = "1.21.3"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
sha2 = "0.10.9"
tokio = { version = "1", features = ["full"] }
tokio-postgres = { version = "0.7.13", features = ["with-chrono-0_4"] }
tokio-tungstenite = { version = "0.26.2", features = ["native-tls"] }
toml = "0.8.22"
